created a form, in the process of adding a database

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,8 @@
     "noFallthroughCasesInSwitch": true
   },
   "include": ["./src"],
+  "paths": {
+    "data.handler": ["./data/handler.js"]
+  },
   "references": [{ "path": "./tsconfig.node.json" }]
 }
