--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-router": "^5.1.20",
     "autoprefixer": "^10.4.18",
     "heroicons": "^2.1.1",
+    "json": "^11.0.0",
     "postcss": "^8.4.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -30,6 +31,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "typescript": "^5.2.2",
-    "vite": "^5.1.4"
-  }
+    "vite": "^5.1.4",
+    "@types/bun": "latest"
+  },
+  "module": "index.ts"
 }
